# oxifive

./: Cargo.toml  README.md
.github/workflows/: build.yml
src/: error.rs  lib.rs  padding.rs
src/read/: data_object.rs  data_storage.rs  dataset.rs  dataspace.rs  datatype.rs  file.rs  filter_pipeline.rs  group.rs  group_btree.rs  link.rs  local_heap.rs  message.rs  mod.rs  node.rs  object.rs  superblock.rs  symbol_table.rs
tests/: simple.rs
tests/files/: hierarchy.h5  simple.h5
