[package]
name = "oxifive"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
bitflags = "1.2.1"
log = "0.4"
num_enum = "0.5.2"
ndarray = "0.15.3"
miniz_oxide = "0.4.4"
flate2 = "1.0.20"
num-traits = "0.2.14"
env_logger = "0.9.0"
anyhow = "1.0.40"
clap = {version="3.0", features=["derive"]}
eframe = "0.18.0"
typed-arena = "2.0.1"
